--- a/app/src/main/res/layout/fragment_more_slider_items.xml
+++ b/app/src/main/res/layout/fragment_more_slider_items.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.home.presentation.moreSliderItems.MoreSliderItemsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/moreSliderItemsFragmentRecyclerView"
+        android:layout_alignParentTop="true"
+        />
+        <ProgressBar
+            android:id="@+id/moreSliderItemsFragmentProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+        />
 
-</FrameLayout>
+</RelativeLayout>
