--- a/app/src/main/res/layout/fragment_product_store.xml
+++ b/app/src/main/res/layout/fragment_product_store.xml
@@ -13,17 +13,36 @@
         android:background="@color/colorGreen"
         />
 
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/storeImageCardView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="@color/colorRed"
+        android:layout_margin="8dp"
+        >
+        <ImageView
+            android:id="@+id/fragmentProductStoreStoreImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            />
+    </com.google.android.material.card.MaterialCardView>
+
+
     <TextView
         android:id="@+id/fragmentProductStoreNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Store Name"
         android:textColor="@color/white"
         android:textSize="24sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@id/storeImageCardView"
         />
 
     <TextView
@@ -31,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Store Description"
-        android:layout_below="@id/fragmentProductStoreNameTextView"
+        android:layout_below="@id/storeImageCardView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -53,8 +72,10 @@
             android:layout_margin="8dp"
             >
             <ImageView
+                android:id="@+id/fragmentProductStoreSellerImageViewView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 />
         </com.google.android.material.card.MaterialCardView>
 
