--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,10 @@
 
 
     <color name="colorRed">#F63325</color>
+
+
+
+    <color name="colorYellow">#CDDC39</color>
     <color name="colorGreen">#54F85B</color>
 
     <color name="colorTransparent">@android:color/transparent</color>
