--- a/app/src/main/res/layout/fragment_buy_now_details.xml
+++ b/app/src/main/res/layout/fragment_buy_now_details.xml
@@ -27,6 +27,27 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/contact_number"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="11"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragmentBuyNowCustomerContactEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="11"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -173,7 +194,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2"
-            android:rowCount="2"
+            android:rowCount="3"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -181,12 +202,13 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:text="Subtotal (3 items)"
+                android:text="Subtotal"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
                 />
             <TextView
+                android:id="@+id/fragmentBuyNowSubTotalTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="0"
@@ -209,54 +231,83 @@
                 android:layout_marginStart="16dp"
                 />
             <TextView
+
+                android:id="@+id/fragmentBuyNowDeliveryChargesTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="0"
                 android:layout_row="1"
                 android:layout_column="1"
-                android:text="Subtotal (3 items)"
+                android:text="100"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 />
-        </GridLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-            <TextView
-                android:id="@+id/fragmentBuyNowTotalTextTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Total : "
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:textSize="24sp" />
+
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12456"
-                android:layout_marginStart="16dp"
+                android:layout_columnWeight="1"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:text="Total"
                 android:layout_marginTop="16dp"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorRed"
-                android:layout_toEndOf="@id/fragmentBuyNowTotalTextTextView"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
                 />
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/fragmentBuyNowTotalPriceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:text="100"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/colorRed"
+                />
+
+
+
+
+
+        </GridLayout>
+
+
+
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Payment Options"/>
-        <androidx.recyclerview.widget.RecyclerView
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/fragmentBuyNowPaymentOptionsList"
-            />
-        
-        
+            android:hint="Select Payment Method"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            >
+            <AutoCompleteTextView
+                android:id="@+id/fragmentBuyNowCustomerPaymentOptionAutoComplete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/fragmentBuyNowPlaceOrderButton"
             android:layout_width="wrap_content"
