--- a/app/src/main/res/layout/fragment_order_details_for_buyer.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_buyer.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.buyerSection.presentation.orderDetailsForBuyer.OrderDetailsForBuyerFragment">
 
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="36dp"
+        android:id="@+id/progressBarFragmentOrderDetailsForBuyer"
+        />
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    >
     <LinearLayout
+        android:id="@+id/fragmentOrderDetailsForBuyerDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:visibility="gone"
+
         >
         <TextView
             android:layout_width="wrap_content"
@@ -83,6 +99,25 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="2dp"
+            android:text="Quantity Unit"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/fragmentOrderDetailsForBuyerProductDefaultQuantityUnitTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Kilo" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="2dp"
             android:text="Product Price"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp" />
@@ -121,7 +156,6 @@
             android:text="1234Xsfefr" />
 
         <TextView
-            android:id="@+id/fragmentOrderDetailsForBuyerOderDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -132,6 +166,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/fragmentOrderDetailsForBuyerOderDateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -231,3 +266,7 @@
 
 
 </ScrollView>
+
+
+
+</RelativeLayout>
