--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -9,7 +9,8 @@
         android:id="@+id/logInFragment"
         android:name="com.example.farmersecom.features.authentication.presentation.login.LogInFragment"
         android:label="Log In"
-        tools:layout="@layout/fragment_log_in" >
+        tools:layout="@layout/fragment_log_in"
+        >
         <action
             android:id="@+id/action_logInFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
@@ -44,6 +45,9 @@
             app:destination="@id/homeFragment" />
         <action
             android:id="@+id/action_profileFragment_to_logInFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/base_nav"
+            app:popUpToInclusive="true"
             app:destination="@id/logInFragment" />
         <action
             android:id="@+id/action_profileFragment_to_buyerDashboardFragment"
@@ -69,6 +73,18 @@
         <action
             android:id="@+id/action_storeFragment_to_addNewProductFragment"
             app:destination="@id/addNewProductFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_activeOrdersFragment"
+            app:destination="@id/activeOrdersFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_completedOrdersFragment"
+            app:destination="@id/completedOrdersFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_activeProductsFragment"
+            app:destination="@id/activeProductsFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_discontinuedProductsFragment"
+            app:destination="@id/discontinuedProductsFragment" />
     </fragment>
     <fragment
         android:id="@+id/addNewProductFragment"
@@ -167,12 +183,58 @@
         android:id="@+id/buyerOrderHistoryFragment"
         android:name="com.example.farmersecom.features.buyerSection.presentation.orderHistory.BuyerOrderHistoryFragment"
         android:label="fragment_buyer_order_history"
-        tools:layout="@layout/fragment_buyer_order_history" />
+        tools:layout="@layout/fragment_buyer_order_history" >
+        <action
+            android:id="@+id/action_buyerOrderHistoryFragment_to_orderDetailsForBuyerFragment"
+            app:destination="@id/orderDetailsForBuyerFragment" />
+    </fragment>
     <fragment
         android:id="@+id/currentOrdersFragment"
         android:name="com.example.farmersecom.features.buyerSection.presentation.currentOrders.CurrentOrdersFragment"
         android:label="fragment_current_orders"
-        tools:layout="@layout/fragment_current_orders" />
+        tools:layout="@layout/fragment_current_orders" >
+        <action
+            android:id="@+id/action_currentOrdersFragment_to_orderDetailsForBuyerFragment"
+            app:destination="@id/orderDetailsForBuyerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/activeOrdersFragment"
+        android:name="com.example.farmersecom.features.storeAdmin.presentation.activeOrders.ActiveOrdersFragment"
+        android:label="fragment_active_orders"
+        tools:layout="@layout/fragment_active_orders" >
+        <action
+            android:id="@+id/action_activeOrdersFragment_to_orderDetailsForSellerFragment"
+            app:destination="@id/orderDetailsForSellerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/completedOrdersFragment"
+        android:name="com.example.farmersecom.features.storeAdmin.presentation.completedOrders.CompletedOrdersFragment"
+        android:label="fragment_completed_orders"
+        tools:layout="@layout/fragment_completed_orders" >
+        <action
+            android:id="@+id/action_completedOrdersFragment_to_orderDetailsForSellerFragment"
+            app:destination="@id/orderDetailsForSellerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/activeProductsFragment"
+        android:name="com.example.farmersecom.features.storeAdmin.presentation.activeProducts.ActiveProductsFragment"
+        android:label="fragment_active_products"
+        tools:layout="@layout/fragment_active_products" />
+    <fragment
+        android:id="@+id/discontinuedProductsFragment"
+        android:name="com.example.farmersecom.features.storeAdmin.presentation.discontinuedProducts.DiscontinuedProductsFragment"
+        android:label="fragment_discontinued_products"
+        tools:layout="@layout/fragment_discontinued_products" />
+    <fragment
+        android:id="@+id/orderDetailsForBuyerFragment"
+        android:name="com.example.farmersecom.features.buyerSection.presentation.orderDetailsForBuyer.OrderDetailsForBuyerFragment"
+        android:label="fragment_order_details_for_buyer"
+        tools:layout="@layout/fragment_order_details_for_buyer" />
+    <fragment
+        android:id="@+id/orderDetailsForSellerFragment"
+        android:name="com.example.farmersecom.features.storeAdmin.presentation.orderDetailsForSeller.OrderDetailsForSellerFragment"
+        android:label="fragment_order_details_for_seller"
+        tools:layout="@layout/fragment_order_details_for_seller" />
 
 
 </navigation>
