--- a/app/src/main/res/layout/fragment_add_new_product.xml
+++ b/app/src/main/res/layout/fragment_add_new_product.xml
@@ -107,30 +107,11 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:inputType="text"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/select_quantity"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            >
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteAddNewProductProductQuantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:inputType="text"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
 
 
 
@@ -188,6 +169,15 @@
                 />
         </LinearLayout>
 
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragmentAddNewProductProgressBar"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="32dp"
+
+            />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonAddProductFragSubmit"
             android:layout_width="wrap_content"
@@ -199,6 +189,9 @@
             android:textSize="18sp"
             android:background="@drawable/button_bg"
         />
+
+
+
     </LinearLayout>
 
 
