--- a/app/src/main/res/layout/fragment_order_details_for_seller.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_seller.xml
@@ -317,7 +317,18 @@
 
     </ScrollView>
 
-
-
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/fragmentOrderDetailsForSellerButtonChangStatus"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:text="@string/status"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="24dp"
+        android:textAllCaps="false"
+        />
 
 </RelativeLayout>
