--- a/app/src/main/res/layout/layout_product_status_item.xml
+++ b/app/src/main/res/layout/layout_product_status_item.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:id="@+id/layoutActiveProductItemImageView"
+            android:id="@+id/layoutProductStatusItemImageView"
             android:layout_alignParentStart="true"
             android:src="@color/purple_200"
             />
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/layoutActiveProductItemImageView"
+            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
             android:layout_marginStart="16dp"
             />
         <TextView
@@ -33,23 +33,53 @@
             android:layout_height="wrap_content"
             android:text="Product Price"
             android:textColor="@color/colorRed"
-            android:layout_toEndOf="@id/layoutActiveProductItemImageView"
+            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
             android:layout_below="@id/layoutActiveProductItemProductNameTextView"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             />
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/layoutProductStatusIndicatorCardView"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            app:cardBackgroundColor="@color/colorGreen"
-            app:cardCornerRadius="10dp"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            >
-        </com.google.android.material.card.MaterialCardView>
+            app:cardBackgroundColor="@color/colorGreen"
+            app:cardCornerRadius="10dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/layoutProductStatusItemChangeProductStatusButton"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:text="@string/status"
+            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
+            android:layout_below="@id/layoutActiveProductItemProductPriceTextView"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="4dp"
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/layoutProductStatusItemDeleteProductButton"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:text="Delete"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/layoutActiveProductItemProductPriceTextView"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="4dp"
+            />
+
 
     </RelativeLayout>
 
