--- a/app/src/main/res/layout/fragment_buy_now_details.xml
+++ b/app/src/main/res/layout/fragment_buy_now_details.xml
@@ -115,10 +115,9 @@
                 android:id="@+id/imageViewLayoutOrderItemsProductImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="@color/colorPrimary"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                />
+                android:background="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/textViewLayoutOrderItemsProductName"
