--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,41 +3,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.cart.presentation.CartFragment">
+    tools:context=".features.cart.presentation.cart.CartFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cartFragmentRecyclerView"
         android:clipToPadding="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/textViewCartFragmentTotalPrice"
+        android:layout_above="@id/fragmentCartGridLayout"
         />
 
-    <TextView
-        android:id="@+id/textTotal"
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:id="@+id/fragmentCartGridLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Total"
+        android:columnCount="2"
+        android:rowCount="3"
         android:layout_above="@id/buttonCartFragmentCheckOut"
-        android:layout_marginBottom="32dp"
-        android:textSize="20sp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="16dp"
-        />
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:text="Subtotal"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            />
+        <TextView
+            android:id="@+id/fragmentCartSubTotalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="0"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:text="Subtotal (3 items)"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:text="Shipping Fees"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            />
+        <TextView
 
-    <TextView
-        android:id="@+id/textViewCartFragmentTotalPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/buttonCartFragmentCheckOut"
-        android:layout_marginStart="48dp"
-        android:layout_marginBottom="24dp"
-        android:layout_toEndOf="@id/textTotal"
-        android:text="Rs.109"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        />
+            android:id="@+id/fragmentCartDeliveryChargesTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="0"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:text="100"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:text="Total"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            />
+        <TextView
+            android:id="@+id/fragmentCartTotalPriceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="0"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:text="100"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:textColor="@color/colorRed"
+            />
+        
+    </GridLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonCartFragmentCheckOut"
