store and profile edit

--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -57,8 +57,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/button_bg"
         android:text="@string/login"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textNoAccount"
@@ -82,6 +81,19 @@
         android:text="@string/register_here"
         android:textAllCaps="false"
         android:textColor="@color/design_default_color_primary" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonLoginFragForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonLoginFragRegister"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@id/textNoAccount"
+        android:background="@android:color/transparent"
+        android:text="@string/forgot_password"
+        android:textAllCaps="false"
+        android:textColor="@color/design_default_color_primary"
+        />
 
     <ProgressBar
         android:id="@+id/progressBarLogIn"
