--- a/app/src/main/res/layout/fragment_setup_store.xml
+++ b/app/src/main/res/layout/fragment_setup_store.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.profile.presentation.setupStore.SetupStoreFragment"
     android:gravity="center"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
 
 
@@ -36,6 +36,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:hint="@string/description"
+
         >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextStoreDescription"
@@ -44,6 +45,30 @@
             android:inputType="text"
             />
     </com.google.android.material.textfield.TextInputLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="Do you Provide Cash on Delivery Out Of City ?"
+        android:textSize="10sp"
+        android:textStyle="bold" />
+
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/fragmentStoreSetupDeliveryInfoSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="No"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
 
 
     <androidx.appcompat.widget.AppCompatButton
